# axeevents

./: .dockerignore  .env.example  .gitignore  Dockerfile  build.txt  compose.yaml  docker-entrypoint-prod.sh  docker-entrypoint.sh  manage.py  pyproject.toml
axeevents/: asgi.py  celery.py  context_processors.py  settings.py  urls.py  wsgi.py
events/: admin.py  auth.py  image_utils.py  models.py  tasks.py  urls.py  utils.py  views.py
events/migrations/: 0001_initial.py
events/templates/: base.html
events/templates/events/: attendee_list.html  create_event.html  edit_event.html  edit_profile.html  event_detail.html  index.html  invite_organizer.html  invite_to_event.html  my_events.html  phone_login.html  text_blast.html  verify_code.html  verify_phone_change.html
events/templates/events/partials/: empty_state.html  event_card.html  event_form.html  event_list.html  event_meta_list.html  question_row.html  questionnaire_modal.html  rsvp_form.html  rsvp_refresh.html
events/templates/partials/: footer.html  messages.html  navbar.html  user_avatar.html
events/templatetags/: format_extras.py
